# uniform-strings

./: .gitignore  ChangeLog.md  Link to .gitignore  Main.hs  README.md  cabal.project  note.txt  note_string.txt  package.yaml  stack.yaml  uniform-string.cabal  uniform-strings.cabal  uniform-strings.cabal.old1  uniform-strings.oldcabal
Data/: StringConversion.hs  StringInfix.hs  StringUtilities.hs  Strings.hs
Uniform/: StringConversion.hs  StringInfix.hs  StringUtilities.hs  Strings.hs
Uniform/Strings/: Conversion.hs  Infix.hs  Utilities.hs
src/: Main.hs  UniformStringTest.hs
test/: Testing.hs
test/Uniform/Strings/: Conversion_test.hs  Infix_test.hs  Utilities_test.hs
tests/Uniform/: TestMainStrings.hs
tests/Uniform/Strings/: Conversion_test.hs  Utilities_test.hs
