name: uniform-string
version: 0.0.7
cabal-version: >=1.22
build-type: Simple
license: GPL
license-file: GPL_3
category: Data, Text
synopsis: manipulate and convert string text bytestring (uniform, consistent)
description: reduce complexity of Haskell by providing a uniform set
    of conversion routines between string, text, bytestring and urlEncoding
    and the most important text manipulation functions for string and text

data-dir: ""

library
    build-depends:
        HTTP, base -any,
--                   bytestring -any,
        mtl,
        HTF, test-invariant,
--        bytestring-arbitrary,
        quickcheck-text,
--        quickcheck-properties,
        --
        bytestring,
        text -any, utf8-string -any,
        split
    exposed-modules:
        Data.Strings
    -- for testing, afterwards include in test-suite
        Data.StringConversion
        Data.StringUtilities
        Data.StringInfix

    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .
    other-modules:

-- example for simple stdio
Test-Suite stringTestAuto
    type:       exitcode-stdio-1.0
    main-is:    StringConversionTest.hs
    build-depends: base, HTF
        , uniform-string
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
--        MinimalTVar
--        MinimalTVarSource

executable stringtest
    build-depends:  base -any
        , HTF
--                    bytestring -any, mtl,
--                   text -any, utf8-string -any
       , uniform-string
--       , basics -- must not be included, gives dependency issue
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
