name: uniform-strings
version: 0.0.7
cabal-version: >=1.22
build-type: Simple
license: GPL
license-file: GPL_3
maintainer: Andrew U. Frank <andrewufrank@gmail.com>
author: Andrew Frank
category: Data, Text
synopsis: manipulate and convert strings of characters uniformly and consistently
description: reduce complexity of Haskell by providing a set of uniformly named
    of conversion routines between String, Text, ByteString and urlEncoding
    with the most important text manipulation functions for string and text
    where the semantic is the same (tested with quickcheck).

source-repository head
    type: git
    location: https://github.com/andrewufrank/uniform-strings.git

library
    build-depends:
        HTTP, base >=4.8 && <= 5,
        mtl,
        HTF, test-invariant,
        quickcheck-text,
        bytestring,
        text, utf8-string,
        -- for testing
--        cgi,
        safe,
        split
    exposed-modules:
        Data.Strings
    -- for testing, afterwards include in test-suite
        Data.StringConversion
        Data.StringUtilities
        Data.StringInfix

    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .
    other-modules:

Test-Suite stringTestAuto
    type:       exitcode-stdio-1.0
    main-is:    UniformStringTest.hs
    build-depends: base, HTF
        , uniform-strings
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:

executable stringtest
    build-depends:  base -any
        , HTF
--                    bytestring -any, mtl,
--                   text -any, utf8-string -any
       , uniform-strings
--       , basics -- must not be included, gives dependency issue
    main-is: Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
