name: uniform-strings
version: 0.0.9.3
cabal-version: >=1.22
build-type: Simple
license: GPL
license-file: GPL_3
maintainer: Andrew U. Frank <andrewufrank@gmail.com>
author: Andrew Frank
category: Data, Text, Uniform
synopsis: manipulate and convert strings of characters uniformly and consistently
description: reduce complexity of Haskell by providing a set of uniformly named
    of conversion routines between String, Text, ByteString and urlEncoding
    with the most important text manipulation functions for string and text
    where the semantic is the same (tested with quickcheck).
    0.0.9 radical reduction to use Text only

source-repository head
    type: git
    location: https://github.com/andrewufrank/uniform-strings.git

library
    build-depends:
        base >=4.8 && <= 5,
        network-uri,
        monads-tf,
        HTF,
        bytestring,
        text,
        text-icu >=0.7.0.1,
        -- for testing
        test-invariant,
        quickcheck-text,
        numeric-prelude,
        snap-core,
        safe,
--        vector,
        split
    exposed-modules:
        Uniform.Strings
    -- for testing, afterwards include in test-suite
        Uniform.StringConversion
        Uniform.StringUtilities
        Uniform.StringInfix

    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .
    other-modules:

Test-Suite stringTestAuto
    type:       exitcode-stdio-1.0
    main-is:    UniformStringTest.hs
    build-depends: base, HTF
        , uniform-strings
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:

executable stringtest
   build-depends:  base -any
       , HTF
      , uniform-strings
   main-is: UniformStringTest.hs
   buildable: True
   default-language: Haskell2010
   hs-source-dirs: src
